# Free-Fast-File-Sync

./: .gitattributes  .gitignore  CLAUDE.md  README.md  biome.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.e2e.json  vite.config.ts  vitest.config.ts  wdio.conf.ts
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DESIGN.md
e2e/: fakeEngine.ts  flows.spec.ts
e2e-native/: smoke.e2e.ts
scripts/: gen-testdata.mjs
scripts/profile/: CompareOnly.ffs_batch  Profile-Compare.ps1  README.md
src/: App.tsx  api.ts  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/examples/: scanbench.rs
src-tauri/icons/: icon.icns
src-tauri/src/: apply.rs  baseline.rs  config.rs  engine.rs  error.rs  ffs_import.rs  fsops.rs  job.rs  lib.rs  logging.rs  main.rs  model.rs  pathutil.rs  plan.rs  reconcile.rs  runlog.rs  runs.rs  scan.rs  settings.rs  store.rs  timeutil.rs
src-tauri/tests/: multi_pair.rs
src/app/: queryClient.ts  router.tsx  store.test.ts  store.ts  useNow.ts
src/components/filter/: FilterEditor.tsx
src/components/job/: JobOverview.tsx  JobRow.tsx  ModeBadge.tsx  PairList.tsx  job.module.css  jobOverview.module.css
src/domain/: ffsImport.test.ts  ffsImport.ts  job.ts  meaning.test.ts  meaning.ts  plan.test.ts  plan.ts  progressTree.test.ts  progressTree.ts  schemas.test.ts  schemas.ts
src/features/: ComingSoon.tsx
src/ipc/: bindings.ts  commands.ts  errors.ts  events.ts  mutations.ts  queries.ts
src/styles/: global.css  tokens.css
src/test/: setup.ts
(+39 files in other folders)
